option('double_precision', type: 'feature', value: 'enabled', description: 'Use double-precision floating point numbers instead of single-precision.')
option('int_64bit', type: 'feature', value: 'enabled', description: 'Use 64 bits for storing integers instead of 32.')
option('physics', type: 'feature', value: 'enabled', description: 'Enables the PhysicsServer2D. Needs a physics implementation to function.')
option('box2d', type: 'feature', value: 'enabled', description: 'Physics implementation for PhysicsServer2D using Box2D. When this feature is enabled, physics will be enabled as well.')