core_source_files = files(
	'string_funcs.cpp',
	'string_name.cpp',
	'utility_functions.cpp',
)

core_headers = files(
	'utility_functions.hpp',
	'string_name.hpp',
	'string_def.hpp',
	'string_funcs.hpp',
)

subdir('math')

core_source_files += core_math_source_files
core_headers += core_math_headers