core_source_files = files(
	'utility_functions.cpp',
)

core_headers = files(
	'utility_functions.hpp',
)

subdir('math')
subdir('string')

core_source_files += core_math_source_files
core_headers += core_math_headers

core_source_files += core_string_source_files
core_headers += core_string_headers