item_source_files = files(
	'camera_item.cpp',
	'item.cpp',
	'rendering_item.cpp',
	'sprite.cpp',
	'tree.cpp',
)

item_headers = files(
	'camera_item.hpp',
	'item.hpp',
	'rendering_item.hpp',
	'sprite.hpp',
	'tree.hpp',
)

subdir('physics')

item_source_files += item_physics_source_files
item_headers += item_physics_headers