scene_source_files = files()

scene_headers = files()

subdir('2d')
subdir('main')
subdir('resources')

scene_source_files += scene_2d_source_files
scene_headers += scene_2d_headers

scene_source_files += scene_main_source_files
scene_headers += scene_main_headers

scene_source_files += scene_resources_source_files
scene_headers += scene_resources_headers