scene_2d_source_files = files(
	'camera2d.cpp',
	'node2d.cpp',
	'sprite2d.cpp',
	'tile_map.cpp',
)

scene_2d_headers = files(
	'camera2d.hpp',
	'node2d.hpp',
	'sprite2d.hpp',
	'tile_map.hpp',
)

subdir('physics')

scene_2d_source_files += scene_2d_physics_source_files
scene_2d_headers += scene_2d_physics_headers