servers_rendering_source_files = files(
	'viewport.cpp',
	'window.cpp',
)

servers_rendering_headers = files(
	'texture.hpp',
	'viewport.hpp',
	'window.hpp',
)

subdir('2d')

servers_rendering_source_files += servers_rendering_2d_source_files
servers_rendering_headers += servers_rendering_2d_headers